--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <debug>true</debug>
+                    <debuglevel>lines,vars,source</debuglevel>
                 </configuration>
                 <executions>
                     <execution>
